unpackaged/main/default/objects/Historical_Revenue__c/Historical_Revenue__c.object-meta.xml
<CustomObject>
    <label>Historical Revenue</label>
    <nameField>
        <label>Historical Revenue FY</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Historical Revenue</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>