unpackaged/main/default/objects/Historical_Revenue__c/fields/AMS__c.field-meta.xml
<CustomField>
    <fullName>AMS__c</fullName>
    <label>AMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>