unpackaged/main/default/objects/Historical_Revenue__c/fields/ASM__c.field-meta.xml
<CustomField>
    <fullName>ASM__c</fullName>
    <label>ASM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>