unpackaged/main/default/objects/Historical_Revenue__c/fields/Cloud__c.field-meta.xml
<CustomField>
    <fullName>Cloud__c</fullName>
    <label>SaaS Platform</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>