unpackaged/main/default/objects/Historical_Revenue__c/fields/Licence__c.field-meta.xml
<CustomField>
    <fullName>Licence__c</fullName>
    <label>Total Licence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>