unpackaged/main/default/objects/Historical_Revenue__c/fields/On_Premise_Licence__c.field-meta.xml
<CustomField>
    <fullName>On_Premise_Licence__c</fullName>
    <label>On Premise Licence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>