unpackaged/main/default/objects/Historical_Revenue__c/fields/SaaS_Licence__c.field-meta.xml
<CustomField>
    <fullName>SaaS_Licence__c</fullName>
    <label>SaaS Licence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>